--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@ body,
 html {
     height: 100%;
     margin:0;
+    font-family: sans-serif;
 }
 
 .landing {
@@ -24,9 +25,26 @@ html {
     transform: translate(-50%, -50%);
 }
 
-* { box-sizing: border-box; }
+.enter-button {
+  font-size: 1.5rem;
+}
 
-body { font-family: sans-serif; }
+a:link, a:visited .enter-button {
+  background-color: white;
+  color: black;
+  border: 2px solid green;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+a:hover, a:active .enter-button {
+  background-color: green;
+  color: white;
+}
+
+* { box-sizing: border-box; }
 
 /* ---- grid ---- */
 
