--- a/main.css
+++ b/main.css
@@ -81,3 +81,55 @@ a:hover, a:active .enter-button {
 .grid-item--height2 { height: 200px; }
 .grid-item--height3 { height: 260px; }
 .grid-item--height4 { height: 360px; }
+
+
+
+
+.hidden{
+  display: none;
+}
+
+
+/* modal stuff */
+
+
+.modal-overlay{
+  background-color: rgba(0,0,0,0.5);  ;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.modal-container{
+
+  border-radius: 5px;
+  text-align:center;
+  
+  background-color: white;
+  min-width: 200px;
+  max-width: 800px;
+  width:50%;
+  margin:0;
+  padding:0;
+  margin:auto;
+
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.modal-title{
+  margin: 0;
+  padding: 0;
+  /* display: inline-block; */
+}
+
+.modal-content{
+  /* display: inline-block; */
+}
