--- a/main.css
+++ b/main.css
@@ -29,7 +29,7 @@ html {
   font-size: 1.5rem;
 }
 
-a:link, a:visited .enter-button {
+/* a:link, a:visited .enter-button {
   background-color: white;
   color: black;
   border: 2px solid green;
@@ -42,7 +42,7 @@ a:link, a:visited .enter-button {
 a:hover, a:active .enter-button {
   background-color: green;
   color: white;
-}
+} */
 
 * { box-sizing: border-box; }
 
@@ -66,6 +66,12 @@ a:hover, a:active .enter-button {
 }
 
 /* ---- grid-item ---- */
+
+.painting > img{
+  object-fit: scale-down;
+  width:100%;
+  height: 100%;
+}
 
 .grid-item {
   width: 160px;
@@ -97,8 +103,16 @@ a:hover, a:active .enter-button {
 
 /* modal stuff */
 
+.modal-img{
+  max-width: 50%;
+  max-height: 25%;
+  object-fit: scale-down;
+}
+
 .modal-close{
-  float:right;
+  position: absolute;
+top: 2px;
+right: 2px;
 }
 
 
