--- a/main.css
+++ b/main.css
@@ -1,24 +1,34 @@
+* { box-sizing: border-box; }
+
 body,
 html {
     height: 100%;
     margin:0;
     font-family: sans-serif;
+    overscroll-behavior: none;
 }
 
-.landing {
+.container {
+    overscroll-behavior: none;
+    width: 200%;
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.full-screen-page {
     position: relative;
     text-align: center;
     color: white;
     height: 100%;
 }
-.landing img {
-    width: 100%;
-    height: 100%;
+.full-screen-page img {
+    width: 100vw;
+    height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
-.landing-text {
+.center-text {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -32,7 +42,7 @@ html {
 a:link, a:visited .enter-button {
   background-color: white;
   color: black;
-  border: 2px solid green;
+  border: 3px solid white;
   padding: 10px 20px;
   text-align: center;
   text-decoration: none;
@@ -40,17 +50,16 @@ a:link, a:visited .enter-button {
 }
 
 a:hover, a:active .enter-button {
-  background-color: green;
+  background-color: purple;
   color: white;
 }
 
-* { box-sizing: border-box; }
 
 /* ---- grid ---- */
 
 .grid {
-  max-width: 1200px;
-  height: 100%;
+  max-width: 100vw;
+  height: 100vh;
 }
 
 /* clearfix */
