--- a/exhibit.css
+++ b/exhibit.css
@@ -56,15 +56,16 @@
   /* modal stuff */
   
   .modal-img{
-    max-width: 50%;
-    max-height: 25%;
-    object-fit: scale-down;
+    max-height: 70vh;
+    max-width: 70%;
+    width: auto;
+    height: auto;
   }
   
   .modal-close{
     position: absolute;
-  top: 2px;
-  right: 2px;
+    top: 2px;
+    right: 2px;
   }
   
   
@@ -81,15 +82,19 @@
   
   .modal-container{
   
+
+    max-width: 80%;
+    max-height: 90%;
+
+
     border-radius: 5px;
     text-align:center;
     
     background-color: white;
-    min-width: 200px;
-    max-width: 800px;
-    width:50%;
+    
     margin:0;
     padding:0;
+    padding-bottom: 17px;
     margin:auto;
   
     position: absolute;
@@ -100,6 +105,7 @@
   }
   
   .modal-title{
-    margin: 0;
+    margin-left: 30px;
+    margin-right: 30px;
     padding: 0;
   }
