fix exhibit on horiz scroll

--- a/exhibit.css
+++ b/exhibit.css
@@ -1,7 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Source+Code+Pro:wght@600&display=swap');
 
+
+body,
+html {
+    height: 100%;
+    margin:0;
+    font-family: sans-serif;
+    /* overscroll-behavior: none; */
+}
 #nav-bar{
-  z-index: 1;
   position: fixed;
   top: 0;
   left:0;
@@ -11,21 +18,7 @@
   padding: 0; */
 }
 
-#nav-arrows{
-  fill: white;
-  max-height: 100%;
-  width:80px;
-  float: right;
-  margin-right: 10px;
-}
-#nav-arrows>a{
-  margin-right: 25%;
-  float: right;
-  width: 20%;
-}
-
 #main{
-  z-index: -1;
   padding-top: 100px;
   height: 100vh !important;
   display: block;
@@ -42,7 +35,8 @@
   .grid {
     margin:auto;
     /* max-width: 200px; */
-    /* width: 100% !important; */
+    height: 100%;
+    width: 100vw !important;
   }
   
   /* clearfix */
@@ -63,7 +57,7 @@
   .grid-item {
     height:200px;
     max-width: 500px;
-    /* float: left; */
+    float: left;
     /* vertical gutter */
     margin-bottom: 20px;
     /* background: #D26;
