--- a/main.css
+++ b/main.css
@@ -5,11 +5,11 @@ html {
     height: 100%;
     margin:0;
     font-family: sans-serif;
-    overscroll-behavior: none;
+    /* overscroll-behavior: none; */
 }
 
 .container {
-    overscroll-behavior: none;
+    /* overscroll-behavior: none; */
     /* width: 300%; */
     display: flex;
     flex-wrap: nowrap;
@@ -19,7 +19,7 @@ html {
     position: relative;
     text-align: center;
     color: white;
-    height: 100%;
+    height: 100vh;
     width: 100vw;
 }
 .full-screen-page img {
@@ -54,3 +54,32 @@ a:hover, a:active .enter-button {
   background-color: purple;
   color: white;
 } */
+
+
+.meet-artists{
+  padding: 20px;
+  display: flex;
+  background-color: #a3b18a;
+}
+
+.meet-artists .right {
+  display: block;
+  flex-basis: 100%;
+  order: 2;
+  text-align: right;
+  padding-right: 20px;
+}
+
+.meet-artists .right h1{
+  padding-top: 50%;
+}
+
+.meet-artists .left {
+  display: block;
+  flex-basis: 100%;
+  text-align: center;
+}
+
+.meet-artists .left img {
+  width: 40%;
+}
