--- a/exhibit.css
+++ b/exhibit.css
@@ -5,7 +5,7 @@ body,
 html {
     height: 100%;
     margin:0;
-    font-family: sans-serif;
+    /* font-family: sans-serif; */
     /* overscroll-behavior: none; */
 }
 #nav-bar{
@@ -20,13 +20,12 @@ html {
 
 #main{
   padding-top: 100px;
-  height: 100vh !important;
+  height: 100vh;
   display: block;
 }
 .period-header{
   color: white;
-  font-family: 'Montserrat', sans-serif;
-  /* font-family: 'Source Code Pro', monospace; */
+  /* font-family: 'Montserrat', sans-serif; */
   text-align: center;
 }
 
@@ -35,7 +34,7 @@ html {
   .grid {
     margin:auto;
     /* max-width: 200px; */
-    height: 100%;
+    /* height: 100%; */
     width: 100vw !important;
   }
   
@@ -55,7 +54,7 @@ html {
   }
   
   .grid-item {
-    height:200px;
+    height:30vh;
     max-width: 500px;
     float: left;
     /* vertical gutter */
