--- a/styles/main.css
+++ b/styles/main.css
@@ -10,7 +10,7 @@ html {
     /* font-family: sans-serif; */
     /* overscroll-behavior: none; */
     font-family: 'Arya', sans-serif;
-    font-size: 20px;
+    /* font-size: 20px; */
 }
 
 .tile {
