--- a/styles/exhibit.css
+++ b/styles/exhibit.css
@@ -5,7 +5,6 @@ body,
 html {
     height: 100%;
     margin:0;
-    /* font-family: sans-serif; */
     /* overscroll-behavior: none; */
 }
 #nav-bar{
@@ -14,13 +13,31 @@ html {
   left:0;
   width: 100%;
   background: linear-gradient(180deg, rgba(88,88,88,100), rgba(88,88,88,0));
-  /* margin: 0;
-  padding: 0; */
+}
+.wall{
+    height: 100vh;
+  background-size: cover;
+}
+
+.ancient {
+  background-image: url(../paintings/gray-exhibit-wall.jpg);
+}
+.romance {
+  background-image: url(../paintings/purple-exhibit-wall.jpg);
+}
+.renaissance {
+  background-image: url(../paintings/red-exhibit-wall.jpg);
+}
+.medieval {
+  background-image: url(../paintings/green-exhibit-wall.jpg);
+}
+.modern{
+  background-image: url(../paintings/yellow-exhibit-wall.jpg);
+
 }
 
 #main{
   padding-top: 100px;
-  height: 100vh;
   display: block;
 }
 .period-header{
@@ -33,8 +50,7 @@ html {
   
   .grid {
     margin:auto;
-    /* max-width: 200px; */
-    /* height: 100%; */
+    height: 100%;
     width: 100vw !important;
   }
   
@@ -54,7 +70,7 @@ html {
   }
   
   .grid-item {
-    height:30vh;
+    height:33vh;
     max-width: 500px;
     float: left;
     /* vertical gutter */
