--- a/styles/main.css
+++ b/styles/main.css
@@ -27,7 +27,7 @@ html {
     text-align: center;
     color: white;
     height: 100vh;
-    width: 100vw;
+    width: 100vw !important; 
 }
 .full-screen-page img {
     width: 100vw;
@@ -83,4 +83,20 @@ html {
 .meet-artists .left img {
   /* height: 55%; */
   width: 30%;
+}
+
+/* unvisited link */
+#digital a:link, #digital a:visited, #digital a:active {
+ background-color: #1b4332;
+  color: white;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+/* mouse over link */
+#digital a:hover {
+  background-color: #d8f3dc;
+  color: black;
 }
