--- a/styles/exhibit.css
+++ b/styles/exhibit.css
@@ -1,21 +1,23 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Source+Code+Pro:wght@600&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Source+Code+Pro:wght@600&display=swap");
 
 body,
 html {
-    height: 100%;
-    margin:0;
-    /* overscroll-behavior: none; */
+  height: 100%;
+  margin: 0;
+  /* overscroll-behavior: none; */
 }
-#nav-bar{
-  position: fixed;
-  top: 0;
-  left:0;
-  width: 100%;
-  background: linear-gradient(180deg, rgba(88,88,88,100), rgba(88,88,88,0));
+@media (min-width: 768px) {
+  #nav-bar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: linear-gradient(180deg, rgba(88, 88, 88, 100), rgba(88, 88, 88, 0));
+  }
 }
-.wall{
-    height: 100vh;
+.wall {
+  height: 100vh;
+  width: 100vw;
   background-size: cover;
 }
 
@@ -31,125 +33,121 @@ html {
 .medieval {
   background-image: url(../paintings/green-exhibit-wall.jpg);
 }
-.modern{
+.modern {
   background-image: url(../paintings/yellow-exhibit-wall.jpg);
-
 }
-
-#main{
-  padding-top: 100px;
+#main {
   display: block;
 }
-.period-header{
+@media (min-width: 768px) {
+  #main {
+    padding-top: 100px;
+  }
+}
+.period-header {
   color: white;
-  /* font-family: 'Montserrat', sans-serif; */
   text-align: center;
 }
 
 /* ---- grid ---- */
-  
-  .grid {
-    margin:auto;
-    height: 100%;
-    width: 100vw !important;
-  }
-  
-  /* clearfix */
-  .grid:after {
-    content: '';
-    display: block;
-    clear: both;
-  }
-  
-  /* ---- grid-item ---- */
-  
-  .painting > img{
-    object-fit: scale-down;
-    width:100%;
-    height: 100%;
-  }
-  
+
+.grid {
+  /* display: grid;
+    grid-template-columns: repeat(6, 1fr);
+  gap: 10px;
+  grid-auto-rows: minmax(100px, auto); */
+  margin: auto;
+  padding: 5%;
+  padding-bottom: 10%;
+  height: 80vh;
+  width: 100vw !important;
+  overflow: clip;
+}
+
+/* clearfix */
+.grid:after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+/* ---- grid-item ---- */
+
+.painting > img {
+  object-fit: scale-down;
+  width: 100%;
+  height: 100%;
+}
+.grid-item {
+  height: 20vh;
+  max-width: 500px;
+  float: left;
+  /* vertical gutter */
+  margin-bottom: 20px;
+}
+
+@media (min-width: 768px) {
   .grid-item {
-    height:33vh;
+    height: 33vh;
     max-width: 500px;
     float: left;
     /* vertical gutter */
-    margin-bottom: 20px;
-    /* background: #D26;
-    border: 2px solid #333;
-    border-color: hsla(0, 0%, 0%, 0.5);
-    border-radius: 5px; */
   }
-  
-  .grid-item--width2 { width: 340px; }
-  .grid-item--width3 { width: 520px; }
-  .grid-item--width4 { width: 780px; }
-  
-  .grid-item--height2 { height: 200px; }
-  .grid-item--height3 { height: 260px; }
-  .grid-item--height4 { height: 360px; }
-  
-  
-  
-  
-  .hidden{
-    display: none;
-  }
-  
-  
-  /* modal stuff */
-  
-  .modal-img{
-    max-height: 70vh;
-    max-width: 70%;
-    width: auto;
-    height: auto;
-  }
-  
-  .modal-close{
-    position: absolute;
-    top: 2px;
-    right: 2px;
-  }
-  
-  
-  .modal-overlay{
-    background-color: rgba(0,0,0,0.5);  ;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-  }
-  
-  .modal-container{
-  
+}
 
-    max-width: 80%;
-    max-height: 90%;
+.hidden {
+  display: none;
+}
 
+/* modal stuff */
 
-    border-radius: 5px;
-    text-align:center;
-    
-    background-color: white;
-    
-    margin:0;
-    padding:0;
-    padding-bottom: 17px;
-    margin:auto;
-  
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-  }
-  
-  .modal-title{
-    margin-left: 30px;
-    margin-right: 30px;
-    padding: 0;
-  }
+.modal-img {
+  max-height: 70vh;
+  max-width: 70%;
+  width: auto;
+  height: auto;
+}
+
+.modal-close {
+  position: absolute;
+  top: 2px;
+  right: 2px;
+}
+
+.modal-overlay {
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.modal-container {
+  max-width: 80%;
+  max-height: 90%;
+
+  border-radius: 5px;
+  text-align: center;
+
+  background-color: white;
+
+  margin: 0;
+  padding: 0;
+  padding-bottom: 17px;
+  margin: auto;
+
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.modal-title {
+  margin-left: 30px;
+  margin-right: 30px;
+  padding: 0;
+}
